--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
   "scripts": {
     "start:dev": "tsx watch src/server.ts",
     "start": "node build/server.js",
+    "eslint:fix": "eslint --ext .js,.ts src --fix",
     "build": "tsup src --out-dir build"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@rocketseat/eslint-config": "2.1.0",
     "@types/node": "20.8.10",
+    "eslint": "8.52.0",
     "tsup": "7.2.0",
     "tsx": "3.14.0",
     "typescript": "5.2.2"
