--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "eslint:fix": "eslint --ext .js,.ts src --fix",
     "build": "tsup src --out-dir build",
     "test": "vitest run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +19,7 @@
     "@rocketseat/eslint-config": "2.1.0",
     "@types/bcryptjs": "2.4.6",
     "@types/node": "20.8.10",
+    "@vitest/coverage-v8": "0.34.6",
     "eslint": "8.52.0",
     "prisma": "5.5.2",
     "tsup": "7.2.0",
