Estratégia de refresh de token

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "vitest": "0.34.6"
   },
   "dependencies": {
+    "@fastify/cookie": "9.1.0",
     "@fastify/jwt": "7.2.3",
     "@prisma/client": "5.5.2",
     "bcryptjs": "2.4.3",
